netpol/netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: netpol-test
  namespace: namespace-a
spec:
  podSelector: {}
  ingress:
  - ports:
    - port: 9999
      protocol: TCP
